--- a/404.html
+++ b/404.html
@@ -200,6 +200,8 @@
 <script type="text/javascript" src="https://renzomedina.github.io/devops-fundamentals/js/main.js" defer></script>
 
   <script type="text/javascript" src="https://renzomedina.github.io/devops-fundamentals/plugins/elasticlunr.min.js" defer></script>
+  <script type="text/javascript" src="https://renzomedina.github.io/devops-fundamentals/plugins/lunr.stemmer.support.js" defer></script>
+  <script type="text/javascript" src="https://renzomedina.github.io/devops-fundamentals/plugins/lunr.es.js" defer></script>
   <script type="text/javascript" src="https://renzomedina.github.io/devops-fundamentals/search_index.es.js" defer></script>
   <script type="text/javascript" src="https://renzomedina.github.io/devops-fundamentals/js/search.js" defer></script>
 
